fix(_modal.scss): height of all modals not to be larger than 100%, so don't truncate content

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -10,9 +10,14 @@
 @mixin hover-shadow {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.13), 1px 2px 3px rgba(0, 0, 0, .1), -1px -2px 3px rgba(0, 0, 0, .05);
 }
+@mixin flexbox-centered {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
 $separator: 1px solid rgba(0, 0, 0, 0.2);
 $border: 1px solid rgba(255, 255, 255, 0.7);
-$light-border: 1px solid rgba(255, 255, 255, 0.2);
 $standard-border-radius: 4px;
 $bezier-transition: 0.3s cubic-bezier(0, 0, 0.24, 1);
