--- a/src/styles/_modal.scss
+++ b/src/styles/_modal.scss
@@ -7,22 +7,23 @@
   left: 0;
   width: 100%;
   height: 100%;
+  @include flexbox-centered;
   background-color: rgba(0, 0, 0, 0.8);
-  display: table;
   transition: opacity .3s ease;
 }
 
 .modal-wrapper {
-  display: table-cell;
-  vertical-align: middle;
+  width: 100%;
+  height: 100%;
+  @include flexbox-centered;
 }
 
 .modal-container {
-  width: 80%;
-  height: 80%;
-  max-height: 80%;
+  width: 100%;
+  height: 100%;
   margin: 0 auto;
   padding: 12px;
+  @include flexbox-centered;
   background-color: $section-color;
   border-radius: 4px;
   transition: $bezier-transition;
